<resources>
    <string name="app_name">CMU</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_weeks_meal_plan">WeeksMealPlan</string>
    <string name="title_activity_daily_meals">DailyMeals</string>
    <string name="nutrition">Nutrition</string>
    <string name="typeIngredient">Ingredient</string>
    <string name="productType">Product</string>
    <string name="recipeType">Recipe</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="Vegan">Vegan</string>
    <string name="diary_free">Diary Free</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="recomended_calories">Recommended Calories: %1$s kcal</string>
    <string name="calculated_calories">Your Max daily calories are set to %1$d kcal</string>
    <string name="meal_time">%1$sh</string>
    <string name="user_register">User Registration</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="height_meters">Height (meters)</string>
    <string name="weight_kilograms">Weight (Kilograms)</string>
    <string name="register">Register</string>
    <string name="ok">OK</string>
    <string name="consumed_calories">Consumed Calories: %1$d kcal</string>
    <string name="guidelines">Guidelines:</string>
    <string name="caloriesX">Calories: %1$d</string>
    <string name="meal_registration">Meal Registration</string>
    <string name="mealName">Name</string>
    <string name="time">Time</string>
    <string name="recommend_calories_percentage_0_1">Recommend Calories Percentage (0 … 1)</string>
    <string name="add_to_default_meals">Add to default meals</string>
    <string name="time_required">Time is required!</string>
    <string name="delete_item">Do you want to Remove this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_information">User Information</string>
    <string name="age_1_d">Age: %1$d </string>
    <string name="height_1_f">Height: %1$.2f m</string>
    <string name="weight_1_d">Weight: %1$d kg</string>
    <string name="type_of_activity_1_s">Type of Activity: %1$s</string>
    <string name="gender_1_s">Gender: %1$s</string>
    <string name="max_daily_calories_1_d">Max Daily Calories: %1$d kcal</string>
    <string name="username_1_s">Username: %1$s</string>
    <string name="take_a_photo_to_your_food">Take a photo to your food !!</string>
    <string name="name">Name: %1$s</string>
    <string name="amount">Amount: %1$d</string>
    <string name="unit">Unit: %1$s</string>
    <string name="calories">Calories: %1$.2f kcal</string>
    <string name="carbs">Carbs: %1$.2f</string>
    <string name="protein">Protein: %1$.2f</string>
    <string name="fat">Fat: %1$.2f</string>

    <string-array name="activity_array">
        <item>Sedentary</item>
        <item>Low Active</item>
        <item>Active</item>
        <item>Very Active</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="marcar_atividade">Marcar atividade</string>
    <string name="notific_o">Notificão</string>
</resources>
